Spacing fix for CTA buttons on home page

--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -196,7 +196,7 @@
     }
   
     &__button--apply-now {
-      margin-right: 2rem;
+      margin-bottom: 2rem;
     }
   
   }
